[package]
name = "completion-token"
version = "0.1.0"
authors = ["Ben Cordero <bencord0@condi.me>"]
edition = "2018"
license = "MIT"

[lib]
doctest = false

[dependencies]
async-lock = "< 2"

[dev-dependencies]
async-channel = "1.6.1"
async-std = { version = "1.9.0", features = ["attributes", "tokio1"] }
futures = "0.3.16"
rstest = "0.11.0"
smol-timeout = "0.6.0"
thiserror = "1.0.26"
tokio = { version = "1.10.0", features = ["rt"] }
